--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-boost": "^0.4.9",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "vue-apollo": "^3.1.0"
   }
 }
